# coding

aoc/2024/01/: distance.rs  similarity.rs
aoc/y2024/: .gitignore  Cargo.toml
aoc/y2024/d02/: nuclear-levels.rs  problem-dampener.rs
aoc/y2025/: Cargo.toml
aoc/y2025/d01/: door_opener.rs  safecracker.rs
aoc/y2025/d02/: advanced_filter.rs  id_filter.rs
aoc/y2025/d03/: joltage.rs  over_joltage.rs
aoc/y2025/d04/: toilet_roll_accessor.rs  toilet_roll_remover.rs
aoc/y2025/d05/: fresher.rs  freshness.rs
aoc/y2025/d06/: math.rs  transposed_math.rs
aoc/y2025/d07/: quantum_tachyon_manifold.rs  tachyon_manifold.rs
aoc/y2025/d08/: junction_connector.rs  short_circuit.rs
aoc/y2025/d09/: biggest_rectangle.rs
aoc/y2025/utils/: context.rs  geometry.rs  lib.rs
thermal/: Makefile
thermal/scripts/: aggregate.py  collector.py  heat_prop.bash  measure_cache.bash  measure_page.bash  measure_page_amd.bash  measure_pages.bash  measure_prefetch.bash  mixed_with_pauses.bash  mixed_without_pause.bash  plot_series.py  thermalbleed.bash
thermal/src/: temp.c
thermal/src/cache/: bad_cache.c  good_cache.c
thermal/src/page/: page_prefetch.c
