[package]
name = "y2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "d01-1"
path = "d01/distance.rs"

[[bin]]
name = "d01-2"
path = "d01/similarity.rs"

[[bin]]
name = "d02-1"
path = "d02/nuclear-levels.rs"

[[bin]]
name = "d02-2"
path = "d02/problem-dampener.rs"

