[package]
name = "y2025"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.2"

[features]
cursor = []

[lib]
name = "utils"
path = "utils/lib.rs"

[[bin]]
name = "d01-1"
path = "d01/safecracker.rs"

[[bin]]
name = "d01-2"
path = "d01/door_opener.rs"

[[bin]]
name = "d02-1"
path = "d02/id_filter.rs"

[[bin]]
name = "d02-2"
path = "d02/advanced_filter.rs"

[[bin]]
name = "d03-1"
path = "d03/joltage.rs"

[[bin]]
name = "d03-2"
path = "d03/over_joltage.rs"

[[bin]]
name = "d04-1"
path = "d04/toilet_roll_accessor.rs"

[[bin]]
name = "d04-2"
path = "d04/toilet_roll_remover.rs"

[[bin]]
name = "d05-1"
path = "d05/freshness.rs"

[[bin]]
name = "d05-2"
path = "d05/fresher.rs"

[[bin]]
name = "d06-1"
path = "d06/math.rs"

[[bin]]
name = "d06-2"
path = "d06/transposed_math.rs"

[[bin]]
name = "d07-1"
path = "d07/tachyon_manifold.rs"

[[bin]]
name = "d07-2"
path = "d07/quantum_tachyon_manifold.rs"

[[bin]]
name = "d08-1"
path = "d08/junction_connector.rs"

[[bin]]
name = "d08-2"
path = "d08/short_circuit.rs"
